# nix-mac

./: DefaultKeyBinding.dict  README.md  aarch64.nix  amd64.nix  configuration.nix  darwin.nix  desktop.nix  flake.nix  graphical.nix  home.nix  install.sh  linux.nix  skhdrc.conf  vimrc  windows.nix
dotfiles/: emacs  ghci  skhdrc.conf
dotfiles/scripts/: open-term.sh  switch.sh
emacs/: config.el  latex-conf.el  markdown-conf.el  maths-blocks.el  org-agda-mode.el  org-conf.el
libs/: macCompose.nix
modules/: emacs.nix  keyboard.nix  macCompose.nix  vim.nix  windows.nix  xmonad.nix
modules/emacs/: config.el  default.nix  emacs.nix  init-early.el  markdown-conf.el  org-agda-mode.el  theme-conf.el
modules/keyboard/: default.nix
modules/sketchy/: icon_map.sh
modules/sketchy/sketchy-items/: battery.sh  calendar.sh  frontapp.sh  music.sh  volume.sh
modules/t2/: default.nix
modules/vim/: default.nix  vim.nix  vimrc
modules/vim/config/: agda.lua  completion.lua  init.lua  lsp.lua  treesitter.lua
modules/xmonad/: build  default.nix  flake.nix  polybar.ini  rofi-theme.rasi  xmonad.cabal  xmonad.hs
modules/xmonad/app/: FileSystem.hs  Main.hs  Monitor.hs  QS.hs  Rofi.hs
modules/xmonad/src/: Test.hs
nvim-lua/: agda.lua  completion.lua  coq.lua  init.lua  lsp.lua  tabline.lua
pkgs/: freer-simple.nix  gforth.nix  ninepmonad.nix  yabai.nix
private/: sudo.nix
private/firmware/brcm/: brcmbt4377b3-apple,formosa.ptb  brcmbt4378b1-apple,atlantisb-u.ptb  brcmbt4378b1-apple,capri-m.ptb  brcmbt4378b1-apple,honshu-u.ptb  brcmbt4378b1-apple,santorini-m.ptb  brcmbt4378b1-apple,shikoku-u.ptb  brcmbt4387c2-apple,hokkaido-u.ptb  brcmbt4387c2-apple,madagascar-u.ptb  brcmbt4387c2-apple,maldives-u.ptb  brcmbt4387c2-apple,okinawa-u.ptb  brcmbt4387c2-apple,snake-u.ptb  brcmbt4388b0-apple,willamette-u.ptb  brcmbt4388c0-apple,willamette-u.ptb  brcmbt4388c2-apple,willamette-u.ptb  brcmfmac4364b2-pcie.apple,ekans-HRPN-m-5.1.txt  (+82 more)
private/pkgs/: berkeley-mono-typeface.nix
sketchy/: add_separator.sh  colors.sh  sketchybarrc  sketchyset.sh
sketchy/sketchy-items/: controls.sh  cpu.sh  display.sh  logo.sh  menus.sh  mic.sh  more-menu.sh  packages.sh  spaces.sh  wifi.sh
system/linux/: default.nix  games.nix  wm.nix
system/macos/: default.nix
system/otherlinux/: default.nix
(+8 files in other folders)
