cabal-version:   3.14
name:            xmonad
version:         0.1.0.0
license:         NONE
author:          James Hobson
maintainer:      james@hobson.space
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

executable xmonad
    import:           warnings
    main-is:          xmonad.hs
    other-modules:    Test
    build-depends:    base ^>=4.19.2.0,
                      dbus,
                      monad-logger
    hs-source-dirs:   src .
    default-language: Haskell2010
