cabal-version:   3.12
name:            xmonad-conf
version:         0.1.0.0
license:         NONE
author:          James Hobson
maintainer:      james@hobson.space
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

executable xmonad-conf
    import:           warnings
    other-modules:    Monitor
                      Rofi
                      QS
                      FileSystem
    main-is:          Main.hs
    build-depends:    base > 4.14 && < 5.0,
                      xmonad,
                      xmonad-contrib,
                      dbus,
                      monad-logger,
                      typed-process,
                      stm,
                      bytestring,
                      directory,
                      NinePMonad
    hs-source-dirs:   app
    ghc-options:      -threaded
    default-language: Haskell2010
